backend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: back-service
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
  namespace: exam
  labels:
    app: back-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-service
  template:
    metadata:
      labels:
        app: back-service
    spec:
      containers:
        - name: backend
          image: abdorty/backend-app:back-app-v1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
                port: 5000
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 5000
              name: backend-port
