frontend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: front-port
  selector:
    app: frontend
  type: LoadBalancer
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: abdorty/frontend-app:front-app-v1
          ports:
            - containerPort: 80
              name: front-port
          resources: {}
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
                port: 80
            periodSeconds: 10
            failureThreshold: 3
